--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <p>
                         I'm a self taught front-end developer in the United States,
                         and I'm <span class="gradient">10 months</span> into my software engineering journey. If you're hiring
-                        a junior front-end developer or need a website built, get in touch!
+                        a junior front-end developer or need a website built, let's get in touch!
 
                     </p>
 
@@ -67,33 +67,75 @@
                 </article>
 
                 <article class="learning-path grid-row-span-2 ">
-                    <h1>Learning Path</h1>
+                    <h2>Learning Path</h2>
 
-                    <div class="learning-blocks">  
-                        <img class="logos" src="" alt="">    
-                        <p>Build Responsive Websites wiht HTML and CSS</p>
-                        <p>COMPLETED</p>
+                    <div class="learning-blocks-container">  
+                        <div class="learning-blocks">
+                            <div class="logos">
+                                <img class="logos" src="./imgs/html_logo.png" alt="" width="40" height="40">
+                                <img class="logos" src="./imgs/css_logo.png" alt="" width="40" height="40">       
+                            </div>
+
+                            <div class="learning-text">
+                                <p>Build Responsive <br> Websites with HTML<br> and CSS</p>
+                            </div>
+                        </div>
+
+                        <div class="completed">
+                            COMPLETED
+                        </div> 
                     </div>
 
-                    <div class="learning-blocks">  
-                        <img class="logos" src="" alt="">    
-                        <p>The Odin Project</p>
-                        <p>COMPLETED</p>
+
+                    <div class="learning-blocks-container">  
+                        <div class="learning-blocks">
+                            <div class="logos">
+                                <img class="logos" src="./imgs/js_logo.png" alt="" width="40" height="40">
+                            </div>
+
+                            <div class="learning-text">
+                                <p>Fundamentals of Javascript</p>
+                            </div>
+                        </div>
+
+                        <div class="completed">
+                            COMPLETED
+                        </div> 
                     </div>
 
-                    <div class="learning-blocks">  
-                        <img class="logos" src="" alt="">    
-                        <p>Intermediate Javascript</p>
-                        <p>COMPLETED</p>
+                    <div class="learning-blocks-container">  
+                        <div class="learning-blocks">
+                            <div class="logos">
+                                <img class="logos" src="./imgs/the_odin_project.png" alt="" width="40" height="40">
+                            </div>
+
+                            <div class="learning-text">
+                                <p>The Odin Project</p>
+                            </div>
+                        </div>
+
+                        <div class="completed">
+                            COMPLETED
+                        </div> 
                     </div>
 
-                    <div class="learning-blocks">  
-                        <img class="logos" src="" alt="">    
-                        <p>React.JS</p>
-                        <p>COMPLETED</p>
-                    </div>
 
-                    
+                    <div class="learning-blocks-container" id="last-child">  
+                        <div class="learning-blocks">
+                            <div class="logos">
+                                <img src="./imgs/native_react.png" alt="" width="40" height="40">
+                                <img class="logos" src="./imgs/three.js" alt="" width="40" height="40">
+                            </div>
+
+                            <div class="learning-text">
+                                <p>React for beginners and fundamentals of Three.JS</p>
+                            </div>
+                        </div>
+
+                        <div class="completed">
+                            COMPLETED
+                        </div> 
+                    </div>
                 </article>
 
                 <article class="grid-row-span-2 ">
