--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </article>
 
                 <article class="img-caraousel">
-                    github
+                   
                 </article>
 
                 <article class="learning-path grid-row-span-2 ">
@@ -138,16 +138,47 @@
                     </div>
                 </article>
 
-                <article class="grid-row-span-2 ">
-                    skills logo (and spelled out)... html, css, javascript, git, figma,        
-                 </article>
+                <article class="languages grid-row-span-2 ">
+                    <h2>Skills/Languages</h2>
+                    
+                    <div class="skills_languages_section">  
+                        <div class="skills">
+                            <img class="logos" src="./imgs/html_logo.png" alt="" width="40" height="40">
+                            <p>HTML</p>
+                        </div>
 
-                <article class="spotify grid-col-span-2">
-                    spofity api
+                        <div class="skills">
+                            <img class="logos" src="./imgs/css_logo.png" alt="" width="40" height="40">
+                            <p>CSS</p>
+                        </div>
+
+                        <div class="skills">
+                            <img class="logos" src="./imgs/js_logo.png" alt="" width="40" height="40">
+                            <p>Javascript</p>
+                        </div>
+
+                        <div class="skills">
+                            <img class="logos" src="./imgs/native_react.png" alt="" width="40" height="40">
+                            <p>React</p>
+                        </div>
+
+                        <div class="skills">
+                            <img class="logos" src="./imgs/three.js" alt="" width="40" height="40">
+                            <p>Three.JS</p>
+                        </div>
+
+                        <div class="skills">
+                            <img class="logos" src="./imgs/git.png" alt="" width="40" height="40">
+                            <p>Git</p>
+                        </div>
+
                 </article>
 
-                <article>
-                    add something cool
+                <article class="admin grid-col-span-2">
+                    <img class ="map-img" src="./imgs/Admin Dashboard.png" alt="">
+                </article>
+
+                <article class="github">
                 </article>
 
                 <article>
